feat: Add Keycloak (#14)
* task: Add CRD auto generated

* feat: add keycloak initialization

* fix: db modeling and tests

* add auth config map

* Fix: minikube tests

* Fix: minikube tests

* Fix: all tests hopefully

* Fix: all tests hopefully

* Fix: all tests hopefully

* Fix: all tests hopefully

* crc set memory

* set default resources

* set default resources

* fix tests

* Fix for Kind

* fix rancher

* Add minikube and kind

* Add minikube and kind

* Add minikube and kind

* Add minikube and kind

* Add minikube and kind

* Increase timing